# learn-wgpu

./: .gitignore  Cargo.toml  README.md
beginner/tutorial1-window/: Cargo.toml
beginner/tutorial1-window/src/: entry.rs  lib.rs
beginner/tutorial1_window/: Cargo.toml  index.html
beginner/tutorial1_window/src/: lib.rs  main.rs
beginner/tutorial2-surface/: Cargo.toml
beginner/tutorial2-surface/src/: lib.rs
beginner/tutorial2_surface/: Cargo.toml  index.html
beginner/tutorial2_surface/src/: lib.rs  main.rs
beginner/tutorial3-pipeline/: Cargo.toml
beginner/tutorial3-pipeline/src/: challenge.rs  challenge.wgsl  entry.rs  lib.rs  shader.wgsl
beginner/tutorial4-buffer/: Cargo.toml
beginner/tutorial4-buffer/src/: entry.rs  lib.rs
beginner/tutorial5-textures/: Cargo.toml
beginner/tutorial5-textures/src/: entry.rs  lib.rs
beginner/tutorial6-uniforms/: Cargo.toml
beginner/tutorial6-uniforms/src/: entry.rs  lib.rs  shader.wgsl
beginner/tutorial7-instancing/: Cargo.toml
beginner/tutorial7-instancing/src/: entry.rs  lib.rs  shader.wgsl
misc/notes/: wasm.md
