[package]
name = "tutorial1_window"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
# 需要 rlib 来在桌面环境中运行 wgpu，需要 cdylib 来构建在浏览器中运行的 Web Assembly。
crate-type = ["cdylib", "rlib"]

[[example]]
name = "tutorial1-window"
path = "src/main.rs"

[features]
default = []
webgl = ["wgpu/webgl"]

[dependencies]
cfg-if.workspace = true
winit.workspace = true
env_logger.workspace = true
log.workspace = true
wgpu.workspace = true
pollster.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wgpu = { workspace = true, features = ["webgl"] }
web-sys = { workspace = true, features = [
    "Document",
    "Window",
    "Element"
] }

