[package]
name = "tutorial2_surface"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "tutorial2_surface_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tutorial2_surface"
path = "src/main.rs"

[dependencies]
cfg-if.workspace = true
winit.workspace = true
env_logger.workspace = true
log.workspace = true
wgpu.workspace = true
pollster.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
wgpu = { workspace = true, features = ["webgl"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "Document",
    "Window",
    "Element"
] }
