[package]
name = "tutorial5-textures"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "tutorial5-textures"
path = "src/entry.rs"

[features]
default = []
webgl = ["wgpu/webgl"]

[dependencies]
cfg-if.workspace = true
winit.workspace = true
env_logger.workspace = true
log.workspace = true
wgpu.workspace = true
pollster.workspace = true
anyhow.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
# image 包含的 jpeg 解码器使用 rayon 来加速线程的解码速度。
# WASM 目前不支持线程，所以我们需要禁用这一特性，这样代码在尝试加载网络上的 jpeg 时就不会崩溃。
image = { workspace = true, default-features = false, features = ["png", "jpeg"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    'Document',
    'Element',
    'Window',
] }
